# ctlta

./: .gitignore  .gitmodules  CMakeLists.txt  FetchContentDependencies.cmake  README.md
Algorithms/CCH/: CCH.h  CCHMetric.h  EliminationTreeQuery.h  UpwardEliminationTreeSearch.h
Algorithms/CH/: CH.h  CHQuery.h
Algorithms/CHL/: road_network.cpp  road_network.h  util.cpp  util.h
Algorithms/CTL/: BalancedTopologyCentricTreeHierarchy.h  CTLMetric.h  CTLQuery.h  TruncatedTreeLabelling.h
Algorithms/Dijkstra/: DagShortestPaths.h  Dijkstra.h
Algorithms/TTL/: BalancedTopologyCentricTreeHierarchy.h  ImbalancedTopologyCentricTreeHierarchy.h  TTLMetric.h  TTLQuery.h  TopologyCentricTreeHierarchy.h  TruncatedTreeLabelling.h
Algorithms/TTLSA/: road_network.cpp  road_network.h  util.cpp
Algorithms/TrafficAssignment/: AllOrNothingAssignment.h  FrankWolfeAssignment.h
Algorithms/TrafficAssignment/Adapters/: CCHAdapter.h  CHLAdapter.h  CTLAdapter.h  CTLSAAdapter.h  CTLSACCHAdapter.h  TTLAdapter.h  TTLSAAdapter.h  TTLSACCHAdapter.h
Algorithms/TrafficAssignment/TraversalCostFunctions/: BprFunction.h  DavidsonFunction.h  InverseFunction.h  ModifiedDavidsonFunction.h
DataStructures/Containers/: BitVector.h  ConcurrentLocalIdMap.h
DataStructures/Geometry/: LatLng.h
DataStructures/Graph/: Graph.h
DataStructures/Graph/Import/: DimacsImporter.h
DataStructures/Labels/: BasicLabelSet.h  SimdLabelSet.h
DataStructures/Labels/Containers/: ParentLabelContainer.h  SimpleDistanceLabelContainer.h  StampedDistanceLabelContainer.h
DataStructures/Partitioning/: SeparatorDecomposition.h  nested_strict_dissection.h
DataStructures/Queues/: AddressableKHeap.h  TournamentTree.h
DataStructures/Utilities/: Permutation.h
Launchers/: AssignTraffic.cc  CMakeLists.txt  RunP2PAlgo.cc
RawData/: CMakeLists.txt  GenerateODPairs.cc  GraphToSimpleDimacs.cc  PrepareGraphForUndirectedTA.cc  TransformLocations.cc
Tools/: Constants.h  OpenMP.h  Timer.h
