add_executable(ConvertGraph ConvertGraph.cc)
target_compile_definitions(ConvertGraph PRIVATE CSV_IO_NO_THREAD)
target_compile_options(ConvertGraph PRIVATE ${FULL_WARNINGS})
target_link_libraries(ConvertGraph proj routingkit kassert rapidxml fast_cpp_csv_parser)

add_executable(GenerateMatchingODPairs GenerateMatchingODPairs.cc)
target_link_libraries(GenerateMatchingODPairs ${RoutingKit_LIBRARY})

add_executable(GenerateODPairs GenerateODPairs.cc)
target_compile_definitions(GenerateODPairs PRIVATE CSV_IO_NO_THREAD)
target_link_libraries(GenerateODPairs routingkit kassert rapidxml vectorclass fast_cpp_csv_parser)
if(OpenMP_FOUND)
  target_link_libraries(GenerateODPairs OpenMP::OpenMP_CXX)
endif()

add_executable(PrepareGraphForUndirectedTA PrepareGraphForUndirectedTA.cc)
target_compile_definitions(PrepareGraphForUndirectedTA PRIVATE CSV_IO_NO_THREAD)
target_link_libraries(PrepareGraphForUndirectedTA PRIVATE fast_cpp_csv_parser)

add_executable(GraphToSimpleDimacs GraphToSimpleDimacs.cc)
target_compile_definitions(GraphToSimpleDimacs PRIVATE CSV_IO_NO_THREAD)
target_link_libraries(GraphToSimpleDimacs PRIVATE fast_cpp_csv_parser)


add_executable(TransformLocations TransformLocations.cc)
target_compile_definitions(TransformLocations PRIVATE CSV_IO_NO_THREAD)
target_compile_options(TransformLocations PRIVATE ${FULL_WARNINGS})
target_link_libraries(TransformLocations proj routingkit kassert fast_cpp_csv_parser)